# code

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  PROJECT-NEW.md  PROJECT.md  curser-plan.md  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cargo/: config.toml
.opencode/agent/: design-beast.md  design-codex.md  design-copilot.md  design-default.md  design-gemini.md  design-gpt.md  design-kimi.md  design-trinity.md  design.md
.plan/: core-key-plan.md  core-rewrite-plan.md  features.md  modrinth-api-reference.md  mrpack-rust-file.md  problem-summary.md  theseus-integration-plan.md
.plan/active/: AGENTS.md  bugs.md  decisions.md  features.md
.plan/archive/: 2026-04-19-lodestone-bugs.md
.plan/core_rewrite/: 01-blockers.md  02-loaders.md  03-mod-management.md  04-logs-properties.md  05-modpack-misc.md  README.md  features.md
.plan/design-inspector/: design-agent-payload.jsonc  implementation-guide.md  opencode-side.md  overview.md  vue-devtools-side.md
.plan/desktop-backend/: README.md  decisions.md  features.md
.plan/final/: brief.md  context.md  steps.md
.plan/specs/: mod-library.md
apps/app/: AGENTS.md  MODRINTH_VERSION.ts  package.json  tauri.conf.json
apps/app-frontend/: package.json  vite.config.ts
apps/app/backend/: AGENTS.md  Cargo.toml
apps/app/backend/src/: AGENTS.md  error.rs  lib.rs  main.rs
apps/app/backend/src/application/: AGENTS.md  instance_service.rs  mod.rs
apps/app/backend/src/domain/: AGENTS.md  auth.rs  instances.rs
apps/app/backend/src/infrastructure/: deno_runtime.rs  mod.rs  process_spawner.rs  server_properties.rs  server_properties_macro.rs  supabase_auth.rs
apps/app/backend/src/presentation/: AGENTS.md  error.rs  extractors.rs  router.rs
apps/app/backend/src/presentation/handlers/: diagnostics_api.rs  instance_api.rs  mod.rs  websockets.rs
apps/app/frontend/: AGENTS.md  package.json  vite.config.ts
apps/app/frontend/src/: App.vue  i18n.config.ts  main.js
apps/app/frontend/src/components/: GridDisplay.vue  RowDisplay.vue
apps/app/frontend/src/composables/: useInstanceConsole.ts
apps/app/frontend/src/helpers/: api.ts  friends.ts  profile.ts  skins.ts  types.d.ts  worlds.ts
apps/app/frontend/src/pages/: Browse.vue  Index.vue  Servers.vue  Skins.vue
apps/app/frontend/src/plugins/: i18n-debug.ts  i18n.ts
apps/app/frontend/src/providers/: app-notifications.ts  app-popup-notifications.ts  content-install.ts  download-progress.ts  instance-settings.ts  server-install.ts  setup.ts
apps/app/tauri/: Cargo.toml  VENDOR.md  build.rs  copy_deps.js  package.json  tauri.conf.json  tauri.dev.config.json
apps/app/tauri/.cargo/: config.toml
apps/app/tauri/src/: main.rs
apps/app/tauri/src/api/: ads.rs  amberite.rs  mod.rs  settings.rs
apps/app/tauri/src/api/amberite/: error.rs  mod.rs
apps/core/: .env.example  AGENTS.md  Cargo.toml
apps/core/migrations/: 001_init.sql  002_full_rewrite.sql  003_alter_instances.sql  004_mods.sql
apps/core/patches/swc_common-0.37.5/src/private/: mod.rs
apps/core/scripts/: AGENTS.md  diagnostic.py  run_diag.ps1
apps/core/src/: AGENTS.md  config.rs  main.rs
apps/core/src/application/: AGENTS.md  auth_service.rs  export_service.rs  instance_actor.rs  instance_service.rs  instance_status_service.rs  log_service.rs  macro_engine.rs  macro_service.rs  mod.rs  mod_service.rs  modpack_service.rs  registry.rs  state.rs  stats_service.rs
apps/core/src/domain/: AGENTS.md  config.rs  event.rs  flavours.rs  instance.rs  instances.rs  mod.rs  modpack.rs  ports.rs
apps/core/src/infrastructure/: AGENTS.md  events.rs  mod.rs  networking.rs  pty_spawner.rs  sqlite_repo.rs
apps/core/src/infrastructure/auth/: AGENTS.md  jwks.rs
apps/core/src/infrastructure/db/: AGENTS.md  instance_repo.rs  mod.rs  modpack_repo.rs
apps/core/src/infrastructure/macro_engine/: AGENTS.md  executor.rs  loader.rs  mod.rs
apps/core/src/infrastructure/macro_engine/ops/: events.rs  instance_control.rs  mod.rs  prelude.rs
apps/core/src/infrastructure/minecraft/: AGENTS.md  flavours.rs  installer.rs  java.rs  mod.rs  modrinth_api.rs  mrpack.rs  server_jar.rs  server_properties.rs
apps/core/src/infrastructure/process/: AGENTS.md  instance_actor.rs  mock_spawner.rs  mod.rs  pty_spawner.rs
apps/core/src/ports/: AGENTS.md  instance_store.rs  mod.rs  modpack_store.rs  process_spawner.rs
apps/core/src/presentation/: AGENTS.md  error.rs  extractors.rs  mod.rs  router.rs
apps/core/src/presentation/handlers/: AGENTS.md  auth_api.rs  console.rs  diagnostics.rs  instance_api.rs  instance_control.rs  instances.rs  logs.rs  macros.rs  mod.rs  modpack.rs  modpack_api.rs  mods.rs  properties.rs  setup.rs  stats.rs  websockets.rs
apps/core/src/theseus/: error.rs  mod.rs  pack.rs  profile.rs  state.rs  util.rs
apps/supabase/: README.md
apps/supabase/functions/accept_friend_request/: index.ts
apps/supabase/functions/core-heartbeat/: index.ts
apps/web/: .env.example  AGENTS.md  package.json  panel.penpot  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
apps/web/implement/: defaults.scss  variables.scss
apps/web/src/: AGENTS.md  App.vue  main.js
apps/web/src/api/: core-client.ts
apps/web/src/assets/stylesheets/: global.scss
apps/web/src/components/ui/: Breadcrumbs.vue  SplashScreen.vue
apps/web/src/composables/: useBrandColors.ts
apps/web/src/helpers/: ads.js  analytics.ts  auth.js  cache.js  events.js  friends.ts  import.js  jre.js  logs.js  metadata.js  mr_auth.ts  pack.ts  process.js  profile.ts  settings.ts  skins.ts  state.js  tags.js  types.d.ts  utils.js  worlds.ts
apps/web/src/helpers/api/: AGENTS.md  client.ts  types.ts  websocket.ts
apps/web/src/helpers/auth/: connection.ts  key-store.ts  modrinth-oauth.ts
apps/web/src/helpers/instances/: console.ts  controls.ts  crud.ts  (+2 more)
apps/web/src/mocks/: tauri-apps.ts
apps/web/src/store/: auth.js
scripts/: run-api-tests.ps1  start-server.ps1  test-core-api-comprehensive.ps1  test-core-api.ps1  test-core-api.py  test-core-api.sh  update-modrinth-deps.mjs  vendor-sync.sh
(+85 files in other folders)
