[workspace]
resolver = "2"
members = [
  "apps/app/tauri",
  "apps/app/backend",
  # "apps/core",  # Excluded due to dependency conflicts with theseus
]

[workspace.package]
edition = "2024"
rust-version = "1.90.0"
version = "0.1.0"
repository = "https://github.com/amberite/code"

[workspace.dependencies]
# Modrinth dependencies (update MODRINTH_VERSION file when changing these)
theseus = { git = "https://github.com/modrinth/code", tag = "v0.13.4" }
daedalus = { git = "https://github.com/modrinth/code", tag = "v0.13.4" }
path-util = { git = "https://github.com/modrinth/code", tag = "v0.13.4" }

async_zip = "0.0.18"
dashmap = "6.1.0"
either = "1.15.0"
enumset = "1.1.10"
hyper = "1.7.0"
hyper-util = "0.1.17"
native-dialog = "0.9.2"
paste = "1.0.15"
serde = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.15.0"
thiserror = "2.0.17"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-error = "0.2.1"
url = "2.5.7"
urlencoding = "2.1.3"
uuid = "1.18.1"
chrono = "0.4.42"

# Tauri
tauri = "2.8.5"
tauri-build = "2.4.1"
tauri-plugin-deep-link = "2.4.3"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2.5.7"
tauri-plugin-opener = "2.5.0"
tauri-plugin-os = "2.3.1"
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-updater = { version = "2.9.0", default-features = false, features = ["rustls-tls", "zip"] }
tauri-plugin-window-state = "2.4.0"

# Platform-specific
webview2-com = "0.38.0"
windows-core = "0.61.2"

# Amberite backend
amberite-backend = { path = "apps/app/backend" }

[workspace.lints.clippy]
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
cfg_not_test = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
default_trait_access = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
format_push_string = "warn"
get_unwrap = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
map_unwrap_or = "allow"
match_bool = "warn"
needless_collect = "warn"
negative_feature_names = "warn"
non_std_lazy_statics = "warn"
pathbuf_init_then_push = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_feature_names = "warn"
redundant_type_annotations = "warn"
todo = "warn"
too_many_arguments = "allow"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
wildcard_dependencies = "warn"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1
