# Isolated from root workspace due to deno/theseus dependency conflicts.
[workspace]

[package]
name = "amberite-core"
description = "Amberite Core — Minecraft server management backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[dependencies]
# ============================================================
# TIER 1 - DENO STACK (HARD-LOCKED)
# ============================================================
deno_core = "=0.354.0"
deno_ops = "=0.226.0"
deno_runtime = "=0.220.0"
deno_node = "=0.150.0"
deno_permissions = "=0.71.0"
deno_ast = "=0.42.1"
deno_graph = "=0.82.0"
import_map = "=0.19.0"
deno_error = "=0.7.0"
node_resolver = "=0.50.0"
sys_traits = "=0.1.17"

# ============================================================
# TIER 2 - DATABASE
# ============================================================
sqlx = { version = "=0.9.0-alpha.1", features = ["runtime-tokio", "tls-rustls", "sqlite", "json", "uuid", "chrono"] }

# ============================================================
# TIER 2 - WEB FRAMEWORK
# ============================================================
axum = { version = "0.7.9", features = ["macros", "ws", "multipart"] }
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
# Use ring crypto backend to avoid aws-lc-sys CMake build issues on Windows
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
axum-macros = "0.4.2"
tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }
tower = "0.4"
headers = "0.4.0"

# ============================================================
# TIER 1 - ASYNC RUNTIME
# ============================================================
tokio = { version = "1.47", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# ============================================================
# TIER 2 - SERIALIZATION
# ============================================================
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.133"
serde-aux = "4.5"
ts-rs = "10.0"
toml = "0.8"

# ============================================================
# TIER 1/2 - SYSTEM & IO
# ============================================================
sysinfo = "0.33"
tempfile = "3.15"
zip = "2.2"
fs3 = "0.5"
tar = "0.4"
flate2 = "1.0"
fs_extra = "1.3"
walkdir = "2.5"
which = "7.0"
dashmap = "6.1"
local-ip-address = "0.6"
port_scanner = "0.1"
sanitize-filename = "0.5"
home = "0.5"
whoami = "1.5"
dotenvy = "0.15"
ansi_term = "0.12"

# ============================================================
# TIER 2 - OBSERVABILITY
# ============================================================
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
color-eyre = "0.6"

# ============================================================
# TIER 1 - CRYPTO & SECURITY
# ============================================================
base64 = "0.22"
rand = "0.8"
hex = "0.4"

# JWT validation (Supabase RS256)
jsonwebtoken = "9.3"

# ============================================================
# TIER 2 - DATA & PARSING
# ============================================================
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
clap = { version = "4.5", features = ["derive"] }
indexmap = "2.7"
once_cell = "1.20"
semver = { version = "1.0", features = ["serde"] }
url = "2.5"
fancy-regex = "0.14"
lazy_static = "1.5"
ringbuffer = "0.15"
rcon = "0.6"

# ============================================================
# TIER 1 - HTTP
# ============================================================
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
igd = "0.12"

# ============================================================
# TIER 2/3 - OTHER
# ============================================================
thiserror = "1.0"
derive_more = "0.99"

# ============================================================
# PTY CONSOLE SUPPORT
# ============================================================
portable-pty = "0.8"

# ============================================================
# UUID
# ============================================================
uuid = { version = "1.11", features = ["v4", "serde"] }

# ============================================================
# MODPACK HANDLING
# ============================================================
async_zip = { version = "0.0.17", features = ["tokio", "tokio-fs", "deflate"] }
sha1 = "0.10"
sha2 = "0.10"
bytes = "1.9"

# ============================================================
# FEATURES
# ============================================================
[features]
vendored-openssl = ["dep:openssl"]

[dependencies.openssl]
version = "0.10"
features = ["vendored"]
optional = true

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
