[package]
name = "amberite-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"

[lib]
crate-type = ["lib"]
