[package]
name = "amberite-backend"
version.workspace = true
edition.workspace = true

[dependencies]
tauri = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[lib]
crate-type = ["lib"]
