[package]
name = "amberite-tauri"
version = "0.1.0"
edition = "2024"
description = "Amberite App - Desktop application for managing modded Minecraft with friends"
license = "GPL-3.0-only"

[dependencies]
async_zip = { version = "0.0.18", features = ["deflate", "tokio-fs"] }
chrono = { version = "0.4.42" }
dashmap = { version = "6.1" }
either = { version = "1.15" }
enumset = { version = "1.1", features = ["serde"] }
hyper = { version = "1.7", features = ["server"] }
hyper-util = { version = "0.1.17" }
native-dialog = { version = "0.9" }
paste = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_with = { version = "3.15" }
tauri = { version = "2.8.5", features = [
  "devtools",
  "macos-private-api",
  "protocol-asset",
] }
tauri-plugin-deep-link = { version = "2.4.3" }
tauri-plugin-dialog = { version = "2.4.0" }
tauri-plugin-fs = { version = "2.4.5" }
tauri-plugin-http = { version = "2.5.7" }
tauri-plugin-opener = { version = "2.5.0" }
tauri-plugin-os = { version = "2.3.1" }
tauri-plugin-single-instance = { version = "2.3.4" }
tauri-plugin-updater = { version = "2.9.0", default-features = false, features = ["rustls-tls"] }
tauri-plugin-window-state = { version = "2.4.0" }
theseus = { git = "https://github.com/modrinth/code", rev = "dd51c08a18131a90eb330d0852afd3cfc99cf32b", features = ["tauri"] }
daedalus = { git = "https://github.com/modrinth/code", rev = "dd51c08a18131a90eb330d0852afd3cfc99cf32b" }
path-util = { git = "https://github.com/modrinth/code", rev = "dd51c08a18131a90eb330d0852afd3cfc99cf32b" }
amberite-backend = { path = "../backend" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.47.1", features = ["time"] }
tracing = { version = "0.1.41" }
tracing-error = { version = "0.2.1" }
url = { version = "2.5.7" }
urlencoding = { version = "2.1.3" }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[build-dependencies]
tauri-build = { version = "2.4.1", features = ["codegen"] }

[target.'cfg(target_os = "linux")'.dependencies]
tauri-plugin-updater = { version = "2.9.0", optional = true }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.0"
windows-core = "=0.61.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
updater = []
